--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "lean",
+  "name": "developsuperpowers",
   "version": "1.0.0",
-  "description": "Lean innovation",
+  "description": "Develop Superpowers website",
   "main": "public/js/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -33,6 +33,7 @@
     "traceur-runtime": "global:$traceurRuntime"
   },
   "dependencies": {
+    "geomicons-open": "0.0.6",
     "jquery": "^2.1.1"
   }
 }
