CMS logic started with atoms and pages

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,13 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"laravel/framework": "4.2.*"
+		"laravel/framework": "4.2.*",
+		"way/generators": "~2.0"
 	},
 	"autoload": {
+		"psr-4": {
+			"Superpowers\\": "app/superpowers"
+		},
 		"classmap": [
 			"app/commands",
 			"app/controllers",
