--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Activeark JWT/Daniel Dunderfelt",
-  "license": "Proprietary",
+  "author": "Daniel Dunderfelt",
+  "license": "MIT",
   "devDependencies": {
-    "browser-sync": "^1.5.8",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^1.0.1",
-    "gulp-filter": "^1.0.2",
-    "gulp-sass": "^0.7.1",
-    "gulp-notify": "^2.0.0",
-    "browserify": "^7.0.0",
-    "browserify-shim": "^3.8.1",
-    "es6ify": "^1.4.0",
-    "vinyl-transform": "0.0.1"
+    "browser-sync": "*",
+    "gulp": "*",
+    "gulp-autoprefixer": "*",
+    "gulp-filter": "*",
+    "gulp-sass": "*",
+    "gulp-notify": "*",
+    "browserify": "*",
+    "browserify-shim": "*",
+    "es6ify": "*",
+    "vinyl-transform": "*"
   },
   "browserify": {
     "transform": [
